--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,10 @@
     
     <%= javascript_importmap_tags %>
     <link href="https://unpkg.com/slim-select@latest/dist/slimselect.css" rel="stylesheet"/>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
   <body>
-
-
-
     <main>
       
       <%# <div class="alert alert-warning alert-dismissible fade show" role="alert">
@@ -30,5 +28,4 @@
       
     </main>
   </body>
-
 </html>
